@@ -5,6 +5,7 @@ import java.util.Scanner;
 
 public class MemberController {
     MemberService memberService;
+    String memberUserId;
 
     public MemberController(){
         memberService = new MemberService();
@@ -22,13 +23,16 @@ public class MemberController {
         System.out.print("PASSWORD : ");
         String password = Container.getSc().nextLine();
         
-        Member member = MemberService.list(userId,password).get(0);
-
+        Member member = MemberService.list(userId,password).getFirst();
+        this.memberUserId = member.getUserId();
         if (member != null) {
             Session.login(member);
-            System.out.println(member.userId + "  LogIN!");
+            System.out.println(member.getUserId() + "  LogIN!");
         } else {
             System.out.println("Login Failed! Check your Id&PW Please!!");
         }
+    }
+    public String getMemberUserId(){
+        return this.memberUserId;
     }
 }
